--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -35,6 +35,7 @@
                     <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
                     {% else %}
                     <li><a href="{{ url_for('home.homepage') }}">Home</a></li>
+                    <li><a href="{{ url_for('home.allevents') }}">Events</a></li>
                     <li><a href="{{ url_for('auth.register') }}">Register</a></li>
                     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                     {% endif %}
@@ -46,7 +47,7 @@
         {% block body %} {% endblock %}
         <div class="push"></div>
     </div>
-    <footer>
+    <div class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -65,7 +66,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
 </body>
 
 </html>
