--- a/Code/app/templates/home/admin_dashboard.html
+++ b/Code/app/templates/home/admin_dashboard.html
@@ -6,6 +6,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Admin Dashboard</h1>
+                        <h3>Be informed Be Active Be Present</h3>
                         <hr class="intro-divider">
                         </ul>
                     </div>
