--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>{{ title }} | Project Dream Team</title>
+    <title>{{ title }} | Birmingham Updates </title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
@@ -47,26 +47,28 @@
         {% block body %} {% endblock %}
         <div class="push"></div>
     </div>
-    <div class="navbar navbar-default navbar-fixed-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li><a href="{{ url_for('home.homepage') }}">Home</a></li>
-                        <li class="footer-menu-divider">⋅</li>
-                        {% if current_user.is_authenticated %}
-                        <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
-                        {% else %}
-                        <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-                        <li class="footer-menu-divider">⋅</li>
-                        <li><a href="{{ url_for('auth.login') }}">Login</a></li>
-                        {% endif %}
-                    </ul>
-                    <p class="copyright text-muted small">Copyright © 2016. All Rights Reserved</p>
-                </div>
+
+</body>
+
+<div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li><a href="{{ url_for('home.homepage') }}">Home</a></li>
+                    <li class="footer-menu-divider">⋅</li>
+                    {% if current_user.is_authenticated %}
+                    <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+                    {% else %}
+                    <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+                    <li class="footer-menu-divider">⋅</li>
+                    <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                    {% endif %}
+                </ul>
+                <p class="copyright text-muted small">Copyright © 2017. All Rights Reserved</p>
             </div>
         </div>
     </div>
-</body>
+</div>
 
 </html>
