--- a/Code/app/templates/home/all-events.html
+++ b/Code/app/templates/home/all-events.html
@@ -1,58 +1,57 @@
-
-{% import "bootstrap/utils.html" as utils %}
-{% extends "base.html" %}
-{% block title %}events{% endblock %}
-{% block body %}
+ {% import "bootstrap/utils.html" as utils %} {% extends "base.html" %} {% block title %}events{% endblock %} {% block body
+%}
 <div class="content-section">
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <br/>
-        {{ utils.flashed_messages() }}
-        <br/>
-        <h1 style="text-align:center;">Events</h1>
-        {% if events %}
-          <hr class="intro-divider">
-          <div class="center">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th width="15%"> Name </th>
-                  <th width="30%"> Location </th>
-                  <th width="20%"> Start Time </th>
-                  <th width="20%"> End Time </th>
-                  <th width="15%"> User Count </th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for event in events %}
-                <tr>
-                  <td> {{ event.name }} </td>
-                  <td> {{ event.description }} </td>
-                  <td> {{ event.startTime }} </td>
-                  <td> {{ event.endTime }} </td>
+    <div class="outer">
+        <div class="middle">
+            <div class="inner">
+                <br/> {{ utils.flashed_messages() }}
+                <br/>
+                <h1 style="text-align:center;">Events</h1>
+                {% if events %}
+                <hr class="intro-divider">
+                <div class="center">
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th width="15%"> Name </th>
+                                <th width="30%"> Location </th>
+                                <th width="20%"> Start Time </th>
+                                <th width="20%"> End Time </th>
+                                <th width="15%"> User Count </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for event in events.items %}
+                            <tr>
+                                <td> {{ event.name }} </td>
+                                <td> {{ event.description }} </td>
+                                <td> {{ event.startTime }} </td>
+                                <td> {{ event.endTime }} </td>
 
-                  <td>
-                    {% if event.users %}
-                      {{ event.users.count() }}
+                                <td>
+                                    {% if event.users %} {{ event.users.count() }} {% else %} 0 {% endif %}
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    <div class="buttonholder">
+                        {% if events.has_prev %} <a href="{{ url_for('home.allevents', page=events.prev_num) }}">&lt;&lt; Prev events</a>{%
+                        else %}&lt;&lt; Prev events{% endif %} | {% if events.has_next %}<a href="{{ url_for('home.allevents', page=events.next_num) }}">Next events &gt;&gt;</a>{%
+                        else %}Next events &gt;&gt;{% endif %}
+                        <br />
+                        <br />
+                        <br />
+                    </div>
+                </div>
+                <div style="text-align: center">
                     {% else %}
-                      0
-                    {% endif %}
-                  </td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
-          </div>
-          <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No events have been added. </h3>
-            <hr class="intro-divider">
-        {% endif %}
+                    <div style="text-align: center">
+                        <h3> No events have been added. </h3>
+                        <hr class="intro-divider"> {% endif %}
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
-{% endblock %}
+    {% endblock %}
