--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -19,14 +19,14 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-                <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Project Dream Team</a>
+                <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Birmingham Updates</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %} {% if current_user.is_admin %}
                     <li><a href="{{ url_for('home.admin_dashboard') }}">Dashboard</a></li>
                     <li><a href="{{ url_for('admin.list_events') }}">Events</a></li>
-                    <li><a href="#">Roles</a></li>
+                    <li><a href="#">API</a></li>
                     <li><a href="#">Users</a></li>
                     {% else %}
                     <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
