Started on create event page for registered user

--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -30,6 +30,8 @@
                     <li><a href="#">Users</a></li>
                     {% else %}
                     <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
+                    <li><a href="{{ url_for('home.allevents') }}">Events</a></li>
+                    <li><a href="#">Create Event</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                     <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
