--- a/Code/app/templates/home/view-event.html
+++ b/Code/app/templates/home/view-event.html
@@ -6,7 +6,10 @@
                 <div class="center">
                     <h1 style="text-align:center;"> {{ event.name }} </h1>
                     <p>
-                        The event is at: {{ event.description }} <br /> The event starts at: {{ event.startTime }} <br />                        The event ends at: {{ event.endTime }} <br />
+                        The event is at: {{ event.description }} <br /> The event starts at: {{ event.startTime }} <br />                       
+                        The event ends at: {{ event.endTime }} <br /> {% if creator %}
+                        <a class="btn btn-large btn-info" href="{{ url_for('home.edit_event', id=event.id) }}"> 
+                                    <i class="icon-info-sign"></i> Edit My Event</a> </a> {% else %} {% endif %}
                     </p>
                 </div>
             </div>
