--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -49,7 +49,7 @@
           <div data-original-title="Toggle Navigation" data-placement="right" class="fa fa-bars tooltips"></div>
       </div>
 
-        <a href="#" class="logo" >Bimrighan <span> Updates</span></a>
+        <a href="#" class="logo" >Bimrigham <span> Updates</span></a>
 
         <div class="nav notify-row" id="top_menu">
             </ul>
