Added in Lee's Create Event Page

--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -26,18 +26,19 @@
                     {% if current_user.is_authenticated %} {% if current_user.is_admin %}
                     <li><a href="{{ url_for('home.admin_dashboard') }}">Dashboard</a></li>
                     <li><a href="{{ url_for('admin.list_events') }}">Events</a></li>
-                    <li><a href="#">API</a></li>
                     <li><a href="#">Users</a></li>
                     {% else %}
                     <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
                     <li><a href="{{ url_for('home.allevents') }}">Events</a></li>
-                    <li><a href="#">Create Event</a></li>
+                    <li><a href="{{ url_for('home.createevent') }}">Create Event</a></li>
+                    <li><a href="#">API</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                     <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
                     {% else %}
                     <li><a href="{{ url_for('home.homepage') }}">Home</a></li>
                     <li><a href="{{ url_for('home.allevents') }}">Events</a></li>
+                    <li><a href="{{ url_for('home.createevent') }}">Create Event</a></li>
                     <li><a href="{{ url_for('auth.register') }}">Register</a></li>
                     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                     {% endif %}
