--- a/Code/app/static/css/style.css
+++ b/Code/app/static/css/style.css
@@ -68,6 +68,7 @@ p.copyright {
 }
 
 .content-section {
+    position: relative;
     padding: 50px 0;
     border-top: 1px solid #e7e7e7;
     overflow: auto;
@@ -96,6 +97,7 @@ p.copyright {
 
 .intro-message {
     position: relative;
+    /**z-index:-30; **/
     padding-top: 20%;
     padding-bottom: 20%;
 }
