--- a/Code/app/templates/admin/events/event.html
+++ b/Code/app/templates/admin/events/event.html
@@ -1,29 +1,16 @@
-
-{% import "bootstrap/wtf.html" as wtf %}
-{% extends "base.html" %}
-{% block title %}
-    {% if add_event %}
-        Add event
-    {% else %}
-        Edit event
-    {% endif %}
-{% endblock %}
-{% block body %}
+ {% import "bootstrap/wtf.html" as wtf %} {% extends "base.html" %} {% block title %} {% if add_event %} Add event {% else
+%} Edit event {% endif %} {% endblock %} {% block body %}
 <div class="content-section">
- <div class="outer">
-    <div class="middle">
-      <div class="inner">
+    <div class="inner">
         <div class="center">
             {% if add_event %}
-                <h1>Add event</h1>
+            <h1>Add event</h1>
             {% else %}
-                <h1>Edit event</h1>
+            <h1>Edit event</h1>
             {% endif %}
-            <br/>
-            {{ wtf.quick_form(form) }}
+            <br/> {{ wtf.quick_form(form) }}
         </div>
-      </div>
     </div>
-  </div>
 </div>
+
 {% endblock %}
