--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-</head>
 
-<head>
-   <link rel='shortcut icon' type='image/x-icon' href='img/logo.ico' />
-   <title>{{ title }} | Birmingham Updates </title>
-   
-<meta charset="utf-8">
+    <link rel='shortcut icon' type='image/x-icon' href='img/logo.ico' />
+    <title>{{ title }} | Birmingham Updates </title>
+
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Mosaddek">
-    
+
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='css/jquery.fancybox.css') }}" rel="stylesheet">
-    
+
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/bootstrap-reset.css') }}" rel="stylesheet">
     <!--external css-->
     <link href="{{ url_for('static', filename='assets/font-awesome/css/font-awesome.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='assets/jquery-file-upload/css/jquery.fileupload-ui.css') }}" rel="stylesheet" type="text/css" >
+    <link href="{{ url_for('static', filename='assets/jquery-file-upload/css/jquery.fileupload-ui.css') }}" rel="stylesheet"
+        type="text/css">
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style-responsive.css') }}" rel="stylesheet" />
-    
+
     <link href="{{ url_for('static', filename='css/responsive.bootstrap.min.css') }}" rel="stylesheet" />
-    
-   <!-- Bootstrap core CSS -->
+
+    <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/bootstrap-reset.css') }}" rel="stylesheet">
     <!--external css-->
@@ -42,124 +42,135 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-              </button>
-                <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Birmingham Updates</a>
+    <section id="container" class="">
+        <!--header start-->
+        <header class="header white-bg">
+            <div class="sidebar-toggle-box">
+                <div data-original-title="Toggle Navigation" data-placement="right" class="fa fa-bars tooltips"></div>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_authenticated %} {% if current_user.is_admin %}
-                    <li><a href="{{ url_for('home.admin_dashboard') }}">Dashboard</a></li>
-                    <li><a href="{{ url_for('admin.list_events') }}">Events</a></li>
-                    <li><a href="#">Users</a></li>
-                    {% else %}
-                    <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
-                    <li><a href="{{ url_for('home.allevents') }}">Events</a></li>
-                    <li><a href="{{ url_for('home.createevent') }}">Create Event</a></li>
-                    <li><a href="#">API</a></li>
-                    {% endif %}
-                    <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
-                    <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
-                    {% else %}
-                    <li><a href="{{ url_for('home.homepage') }}">Home</a></li>
-                    <li><a href="{{ url_for('home.allevents') }}">Events</a></li>
-                    <li><a href="{{ url_for('home.createevent') }}">Create Event</a></li>
-                    <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-                    <li><a href="{{ url_for('auth.login') }}">Login</a></li>
-                    {% endif %}
+
+            <a href="{{ url_for('home.homepage') }}" class="logo">BHAM <span> Activities</span></a>
+
+            <div class="nav notify-row" id="top_menu">
                 </ul>
             </div>
-        </div>
-    </nav>
-=======
-<section id="container" class="">
-      <!--header start-->
-      <header class="header white-bg">
-        <div class="sidebar-toggle-box">
-          <div data-original-title="Toggle Navigation" data-placement="right" class="fa fa-bars tooltips"></div>
-      </div>
-
-        <a href="#" class="logo" >Bimrigham <span> Updates</span></a>
-
-        <div class="nav notify-row" id="top_menu">
-            </ul>
-          </div>
-        <div class="top-nav ">
-          <ul class="nav pull-right top-menu">
-              <li class="dropdown">
-                  <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                      <span class="username">{{ current_user.username }}!</span>
+            <div class="top-nav ">
+                <ul class="nav pull-right top-menu">
+                    <li class="dropdown">
+                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                      <span class="username">{{ current_user.username }}</span>
                       <b class="caret"></b>
-                  </a>
-                  <ul class="dropdown-menu extended logout">
-                      <div class="log-arrow-up"></div>
-                      <li><a href="#"><i class="fa fa-key"></i> Log Out</a></li>
-                  </ul>
-              </li>
-              <!-- user login dropdown end -->
-          </ul>
-     </div>
-</section>
-     
-      <aside>
-          <div id="sidebar"  class="nav-collapse ">
-              <!-- sidebar menu start-->
-              <ul class="sidebar-menu" id="nav-accordion">
-                 
-                  <li class="sub-menu">
-                      <a href="javascript:;">
+                  </a> {% if current_user.is_authenticated %}
+                        <ul class="dropdown-menu extended logout">
+                            <div class="log-arrow-up"></div>
+                            <li><a href="{{ url_for('auth.logout') }}"><i class="fa fa-key"></i> Log Out</a></li>
+                        </ul>
+                        {% else %}
+                        <ul class="dropdown-menu extended login">
+                            <div class="log-arrow-up"></div>
+                            <li><a href="{{ url_for('auth.login') }}"><i class="fa fa-key"></i> Log In</a></li>
+                            <li><a href="{{ url_for('auth.register') }}"><i class="fa fa-key"></i> Register</a></li>
+                        </ul>
+                        {% endif %}
+                    </li>
+                    <!-- user login dropdown end -->
+                </ul>
+            </div>
+    </section>
+
+    <aside>
+        <div id="sidebar" class="nav-collapse ">
+            <!-- sidebar menu start-->
+            <ul class="sidebar-menu" id="nav-accordion">
+                {% if current_user.is_authenticated %} {% if current_user.is_admin %}
+                <!-- Users who are authenticated and admin -->
+                <li class="sub-menu">
+                    <a href="javascript:;">
                           <i class="fa fa-user"></i>
                           <span>User</span>
                       </a>
-                      <ul class="sub">
-                      <!--    <li><a  href="boxed_page.html">User</a></li>-->
-                        <li><a  href="#">Add Users</a></li>
-                          <li><a  href="#"> View Users</a></li>
-                      
-                      </ul>
-                  </li>
+                    <ul class="sub">
+                        <!--    <li><a  href="boxed_page.html">User</a></li>-->
+                        <li><a href="#">Add Users</a></li>
+                        <li><a href="#"> View Users</a></li>
+
+                    </ul>
+                </li>
+
                 <li class="sub-menu">
-                      <a href="javascript:;">
+                    <a href="javascript:;">
                           <i class="fa fa-calendar"></i>
                           <span>Events</span>
                       </a>
-                      <ul class="sub">
-                      <li><a  href="#">Add Event</a></li>
-                          <li><a href="{{ url_for('admin.list_events') }}">View Event</a></li>
-                      </ul>
-                  </li>
-                  
-                  <li class="sub-menu">
-                      <a href="javascript:;">
+                    <ul class="sub">
+                        <li><a href="#">Add Event</a></li>
+                        <li><a href="{{ url_for('admin.list_events') }}">View Events</a></li>
+                    </ul>
+                </li>
+                {% else %}
+                <!-- Users who are authenticated but not admin -->
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                          <i class="fa fa-calendar"></i>
+                          <span>Events</span>
+                      </a>
+                    <ul class="sub">
+                        <li><a href="{{ url_for('home.createevent') }}">Add Event</a></li>
+                        <li><a href="{{ url_for('home.allevents') }}">View Events</a></li>
+                        <li><a href="{{ url_for('home.myevents') }}">My Events</a></li>
+                    </ul>
+                </li>
+
+
+                {% endif %} {% else %}
+                <!-- Users who are not authenticated -->
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                          <i class="fa fa-calendar"></i>
+                          <span>Events</span>
+                      </a>
+                    <ul class="sub">
+                        <li><a href="{{ url_for('home.allevents') }}">View Events</a></li>
+                    </ul>
+                </li>
+
+                {% endif %}
+                <!--
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                          <i class="fa fa-calendar"></i>
+                          <span>Events</span>
+                      </a>
+                    <ul class="sub">
+                        <li><a href="#">Add Event</a></li>
+                        <li><a href="{{ url_for('admin.list_events') }}">View Event</a></li>
+                    </ul>
+                </li>
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
                           <i class="fa  fa-shopping-cart"></i>
                           <span>Categories</span>
                       </a>
-                      <ul class="sub">
-                          <li><a  href="#">View Categories</a></li>
-                     </ul>
-                  </li>
-                  <li class="sub-menu">
-                      <a href="javascript:;">
+                    <ul class="sub">
+                        <li><a href="#">View Categories</a></li>
+                    </ul>
+                </li>
+                <li class="sub-menu">
+                    <a href="javascript:;">
                           <i class="fa fa-map-marker"></i>
                           <span>Reporting</span>
                       </a>
-                      <ul class="sub">
-                          <li><a  href="#">Locate Users</a></li>
-                          <li><a  href="#">Locate Events</a></li>
-                     </ul>
-                  </li>
-          </div>
-      </aside>
-      <!--sidebar end-->
->>>>>>> 6e7cca663d0f41f22783f701280f9dcc9cf409de
+                    <ul class="sub">
+                        <li><a href="#">Locate Users</a></li>
+                        <li><a href="#">Locate Events</a></li>
+                    </ul>
+                </li>
+                -->
+            </ul>
+        </div>
+    </aside>
+    <!--sidebar end-->
     <div class="wrapper">
         {% block body %} {% endblock %}
         <div class="push"></div>
@@ -170,7 +181,7 @@
     <script class="include" type="text/javascript" src="../static/js/jquery.dcjqaccordion.2.7.js"></script>
     <script src="../static/js/jquery.scrollTo.min.js"></script>
     <script src="../static/js/jquery.nicescroll.js" type="text/javascript"></script>
-    <script src="../static/js/respond.min.js" ></script>
+    <script src="../static/js/respond.min.js"></script>
     <script src="../static/js/common-scripts.js"></script>
 </body>
 
