--- a/Code/app/templates/home/index.html
+++ b/Code/app/templates/home/index.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Birmingham Updates</h1>
+                        <h1>BHAM Activities</h1>
                         <h3>Be informed Be Active Be Present</h3>
                         <hr class="intro-divider">
                         </ul>
@@ -15,4 +15,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
