--- a/Code/app/static/css/style-responsive.css
+++ b/Code/app/static/css/style-responsive.css
@@ -90,9 +90,9 @@
     #sidebar {
         height: auto;
         overflow: hidden;
-        position: absolute;
+        position: relative;
         width: 100%;
-        z-index: 1001;
+        z-index: 3000;
     }
 
 
