--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -103,7 +103,7 @@
                           <span>Events</span>
                       </a>
                     <ul class="sub">
-                        <li><a href="#">Add Event</a></li>
+                        <li><a href="{{ url_for('admin.add_event') }}">Add Event</a></li>
                         <li><a href="{{ url_for('admin.list_events') }}">View Events</a></li>
                     </ul>
                 </li>
@@ -176,13 +176,22 @@
         <div class="push"></div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type = "text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type = "text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
+    <script type = "text/javascript" src="{{url_for('static', filename='js/jquery.dcjqaccordion.2.7.js')}}"></script>
+    <script type = "text/javascript" src="{{url_for('static', filename='js/jquery.scrollTo.min.js')}}"></script>
+    <script type = "text/javascript" src="{{url_for('static', filename='js/jquery.nicescroll.js')}}"></script>
+    <script type = "text/javascript" src="{{url_for('static', filename='js/respond.min.js')}}"></script>
+    <script type = "text/javascript" src="{{url_for('static', filename='js/common-scripts.js')}}"></script>
+
+
+
+    <!--<script src="../static/js/jquery.dcjqaccordion.2.7.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
-    <script class="include" type="text/javascript" src="../static/js/jquery.dcjqaccordion.2.7.js"></script>
     <script src="../static/js/jquery.scrollTo.min.js"></script>
     <script src="../static/js/jquery.nicescroll.js" type="text/javascript"></script>
     <script src="../static/js/respond.min.js"></script>
-    <script src="../static/js/common-scripts.js"></script>
+    <script src="../static/js/common-scripts.js"></script> -->
 </body>
 
 <div class="navbar navbar-default navbar-fixed-bottom">
