--- a/Code/app/templates/home/view-event.html
+++ b/Code/app/templates/home/view-event.html
@@ -1,4 +1,9 @@
- {% import "bootstrap/wtf.html" as wtf %} {% extends "base.html" %} {% block title %} {% endblock %} {% block body %}
+ {% import "bootstrap/wtf.html" as wtf %}
+  {% extends "base.html" %}
+  {% block title %}
+  {% endblock %}
+
+  {% block body %}
 <div class="content-section">
     <div class="inner">
         <div class="center">
@@ -6,14 +11,27 @@
             <p>
                 The event is at: {{ event.description }} <br /> The event starts at: {{ event.startTime }} <br /> The event
                 ends at: {{ event.endTime }} <br /> {% if creator %}
-                <a class="btn btn-large btn-info" href="{{ url_for('home.edit_event', id=event.id) }}"> 
+                <a class="btn btn-large btn-info" href="{{ url_for('home.edit_event', id=event.id) }}">
                                     <i class="icon-info-sign"></i> Edit My Event</a> </a> {% else %} {% endif
                 %}
             </p>
             {% if tfval %}
             <h2> Google Map </h2>
-            {{googlemap("my_awesome_map", lat=event.latitude, lng=event.longitude, markers=[(event.longitude, event.latitude)])}} {%
-            else %} {% endif %}
+
+          {# Google Map New Version#}
+          {% set location=(event.latitude,event.longitude) %}
+          {% set style="width:700px;height:500px;"%}
+          {{
+            googlemap("simple-map",
+              location.0, location.1,
+              markers=[location,],
+              style=style
+              )
+            }}
+
+
+            {%else %}
+             {% endif %}
         </div>
     </div>
 </div>
