--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -91,8 +91,7 @@
                       </a>
                     <ul class="sub">
                         <!--    <li><a  href="boxed_page.html">User</a></li>-->
-                        <li><a href="#">Add Users</a></li>
-                        <li><a href="#"> View Users</a></li>
+                        <li><a href="{{ url_for('admin.list_users') }}"> View Users</a></li>
 
                     </ul>
                 </li>
