--- a/final-project/Code/app/templates/base.html
+++ b/final-project/Code/app/templates/base.html
@@ -91,8 +91,7 @@
                       </a>
                     <ul class="sub">
                         <!--    <li><a  href="boxed_page.html">User</a></li>-->
-                        <li><a href="#">Add Users</a></li>
-                        <li><a href="#"> View Users</a></li>
+                        <li><a href="{{ url_for('admin.list_users') }}"> View Users</a></li>
 
                     </ul>
                 </li>
@@ -105,6 +104,16 @@
                     <ul class="sub">
                         <li><a href="{{ url_for('admin.add_event') }}">Add Event</a></li>
                         <li><a href="{{ url_for('admin.list_events') }}">View Events</a></li>
+                    </ul>
+                </li>
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                          <i class="fa fa-calendar"></i>
+                          <span>Email</span>
+                      </a>
+                    <ul class="sub">
+                        <li><a href="{{ url_for('admin.test_email') }}">Test Email</a></li>
                     </ul>
                 </li>
                 {% else %}
