--- a/final-project/Code/app/templates/home/view-event.html
+++ b/final-project/Code/app/templates/home/view-event.html
@@ -10,7 +10,10 @@
             <h1 style="text-align:center;"> {{ event.name }} </h1>
             <p>
                 The event is at: {{ event.description }} <br /> The event starts at: {{ event.startTime }} <br /> The event
-                ends at: {{ event.endTime }} <br /> {% if creator %}
+                ends at: {{ event.endTime }} <br /> There are {{ attendees }} people going. <br /> {% if attendees|int() == 1|int() %}
+                {% for person in attendanceList %} {{ person.username }} {% endfor %} is going. {% else %} {% for person in attendanceList %}
+                    {{ person.username }} {%if not loop.last%}, and {% endif %} {% endfor %} are going. {% endif %}                
+                <br /> {% if creator %}
                 <a class="btn btn-large btn-info" href="{{ url_for('home.edit_event', id=event.id) }}">
                                     <i class="icon-info-sign"></i> Edit My Event</a> </a> {% else %} {% endif
                 %}
