--- a/Code/app/templates/base.html
+++ b/Code/app/templates/base.html
@@ -75,6 +75,7 @@
                     </li>
                     <!-- user login dropdown end -->
                 </ul>
+                <span href="#" class="logo pull-right">Login/Register</span>                
             </div>
     </section>
 
