Forget Password functionality implemented.

--- a/final-project/Code/app/templates/base.html
+++ b/final-project/Code/app/templates/base.html
@@ -70,6 +70,7 @@
                             <div class="log-arrow-up"></div>
                             <li><a href="{{ url_for('auth.login') }}"><i class="fa fa-key"></i> Log In</a></li>
                             <li><a href="{{ url_for('auth.register') }}"><i class="fa fa-key"></i> Register</a></li>
+                            <li><a href="{{ url_for('auth.forget_password') }}"><i class="fa fa-key"></i> Forget Password</a></li>
                         </ul>
                         {% endif %}
                     </li>
